kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jira
  labels:
    app: jira
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: https
    port: 443
    targetPort: https
  selector:
    app: jira
